# otomata-worker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
otomata_worker/: __init__.py  chat_manager.py  cli.py  database.py  events.py  identities.py  models.py  rate_limiter.py  secrets.py  server.py  task_manager.py  worker.py
otomata_worker/executors/: __init__.py  agent.py  script.py
