[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otomata-worker"
version = "0.1.0"
description = "Distributed task worker with Claude Agent SDK support"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "cryptography",
    "typer>=0.9.0",
    "rich",
    "fastapi>=0.104",
    "uvicorn[standard]",
]

[project.optional-dependencies]
agent = [
    "claude-agent-sdk",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
otomata-worker = "otomata_worker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["otomata_worker"]
